# pica-pica

./: .gitignore  CA.pem  CONTRIBUTORS  LICENSE  Makefile  Makefile.am  PICA_client.c  PICA_client.h  PICA_common.h  PICA_id.c  PICA_id.h  PICA_log.c  PICA_log.h  PICA_msgproc.c  PICA_msgproc.h  PICA_netconf.c  PICA_netconf.h  PICA_node.c  PICA_node.h  PICA_nodeaddrlist.c  PICA_nodeaddrlist.h  PICA_nodeconfig.c  PICA_nodeconfig.h  PICA_nodejoinskynet.c  PICA_nodejoinskynet.h  PICA_nodewait.c  PICA_nodewait.h  PICA_proto.h  PICA_security.h  PICA_signverify.c  PICA_signverify.h  README  build.txt  configure.ac  dhparam4096.pem  gentoo_initscript  macros.txt  nodelist_db_create.sql  pica-client-0.5.3.ebuild  pica-node-0.5.2.ebuild  (+3 more)
apple/: Info.plist  picapica.icns
debian/: changelog  changelog.in  control  copyright  pica-client.install  pica-client.menu  pica-client.postinst  pica-client.postrm  pica-node.default  pica-node.dirs  pica-node.init  pica-node.install  pica-node.manpages  pica-node.postinst  pica-node.postrm  pica-node.preinst  pica-node.prerm  rules
doc/: TASKS.txt  bugtraq.txt  concepts.txt  proto-doc-audiovideo.txt  proto-doc.txt  proto.txt
doc/pica-client-tutorial/: gettingstarted.html
gentoo/: pica-client-0.5.3.ebuild  pica-client-0.6.ebuild  pica-node-0.6.ebuild
pica-client/: accounts.cpp  accounts.h  accountswindow.cpp  accountswindow.h  askpassword.cpp  askpassword.h  audiodevice.cpp  audiodevice.h  audiovideocallcontroller.cpp  audiovideocallcontroller.h  callwindow.cpp  callwindow.h  chatwindow.cpp  chatwindow.h  contactlistwidget.cpp  contactlistwidget.h  contacts.cpp  contacts.h  dhparam.cpp  dhparam.h  filetransfercontroller.cpp  filetransfercontroller.h  globals.h  history.cpp  history.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mediadevice.cpp  mediadevice.h  msguirouter.cpp  msguirouter.h  nodes.cpp  nodes.h  nodethread.cpp  nodethread.h  openssltool.cpp  openssltool.h  pica-client.desktop  (+13 more)
pica-client/dialogs/: addaccountdialog.cpp  addaccountdialog.h  filetransferdialog.cpp  filetransferdialog.h  forgedcertdialog.cpp  forgedcertdialog.h  nodesdialog.cpp  nodesdialog.h  registeraccountdialog.cpp  registeraccountdialog.h  settingsdialog.cpp  settingsdialog.h  showpicaiddialog.cpp  showpicaiddialog.h  viewcertdialog.cpp  viewcertdialog.h
pica-registrar/: PICA_registrar.cpp  db_schema.sql
tests/: 0337.pem  0338.pem  0339.pem  033B.pem  033C.pem  033D.pem  033E.pem  033F.pem  033a.pem  64kb.txt  Makefile.win  add_newconn  build.txt  cert_pkey.pem  cert_pkey_3.pem  cert_pkey_n2.pem  create_certs_commands.txt  dh2048.pem  dh512.pem  fdssize  fdssize.c  getid  nodeaddrlist_test.txt  privkey_tester4.pem  save_nodelist.txt  test_addnewconn.c  test_addrconv.c  test_client  test_client.c  test_client_win.dev  test_client_win.layout  test_getidfromsubstr.c  test_msgproc  test_msgproc.c  test_nodeaddr  test_nodeaddr.c  test_randseed.c  test_randseed.dev  test_signverify.c  tester10_pkey.pem  (+24 more)
tests/ca/: ca_config.txt  newtestca_pkey.pem  picapica_test_CA_pkey.pem  privkey_testnetCA.pem  serial  serial.old  testnetCA.pem  testnet_cert_index_db.txt  testnet_cert_index_db.txt.old
tests/trustedCA/: newtestca.pem  picapica_test_CA.pem
windows/: pica-client.nsi  pica-node.nsi
